Fix: Container overflows

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,13 +7,12 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  
   overflow-x: hidden;
   background: linear-gradient(to right, #0c0808, #16163f);
 }
 
 #container {
-  gap: 2em;
   width: 100%;
   height: 100%;
 }
@@ -165,6 +164,9 @@ input#search {
   bottom: 0;
 }
 @media (min-width: 640px) {
+  #container{
+    height: 100vh;
+  }
   #header {
     padding-top: 4em;
   }
